# mlua_magic

./: .rustfmt.toml  Cargo.toml  README.md  test.sh
.github/workflows/: rust.yml
src/: compile.rs  lib.rs  load.rs
tests/: example.rs
