[package]
name = "mlua-magic-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
mlua = { version = "0.11.4", features = ["lua54", "serde", "macros"] }
serde = { version = "1.0.228", features = [ "derive" ]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"